1. Upload Directory Scanner is added 2. Code refactorings and fixes
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@93 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
+++ b/src/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Messaging\MessageBus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DateTimeUtil.cs" />
+    <Compile Include="Utils\FileUtils.cs" />
     <Compile Include="Utils\ListUtil.cs" />
     <Compile Include="Utils\WindsorExtensions.cs" />
     <Compile Include="Validations\Validate.cs" />
