--- a/src/NDDDSample/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/NDDDSample.Interfaces.BookingRemoteService.Host.csproj
+++ b/src/NDDDSample/app/interfaces/NDDDSample.Interfaces.BookingRemoteService.Host/NDDDSample.Interfaces.BookingRemoteService.Host.csproj
@@ -57,6 +57,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\lib\Rhino\NHibernate.dll</HintPath>
     </Reference>
+    <Reference Include="NHibernate.ByteCode.Castle, Version=2.1.0.1001, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\lib\Rhino\NHibernate.ByteCode.Castle.dll</HintPath>
+    </Reference>
     <Reference Include="Rhino.Commons, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\lib\Rhino\Rhino.Commons.dll</HintPath>
