--- a/src/RegisterApp/NDDDSample.RegisterApp/Windsor.config
+++ b/src/RegisterApp/NDDDSample.RegisterApp/Windsor.config
@@ -5,7 +5,13 @@
        service ="NDDDSample.RegisterApp.HandlingReportService.IHandlingReportService,
              NDDDSample.RegisterApp"
        type="NDDDSample.RegisterApp.HandlingReportService.HandlingReportServiceClient,
-         NDDDSample.RegisterApp">      
+         NDDDSample.RegisterApp">
+    </component>
+    <component id="messageBoxCreator"
+       service ="NDDDSample.RegisterApp.Views.IMessageBoxCreator,
+             NDDDSample.RegisterApp"
+       type="NDDDSample.RegisterApp.Views.MessageBoxCreator,
+         NDDDSample.RegisterApp">
     </component>
     <component id="handlingReportViewModel"       
        type="NDDDSample.RegisterApp.ViewModels.HandlingReportViewModel,
