Composite command pattern implemented
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@102 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/RegisterApp/NDDDSample.RegisterApp/NDDDSample.RegisterApp.csproj
+++ b/src/RegisterApp/NDDDSample.RegisterApp/NDDDSample.RegisterApp.csproj
@@ -90,7 +90,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\RelayCommand.cs" />
+    <Compile Include="Commands\CompositeCommand.cs" />
+    <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="DynamicContainer.cs" />
     <Compile Include="Log\ILog.cs" />
     <Compile Include="Log\Log4NetLoggerProxy.cs" />
