Web.Controllers signed
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@104 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/NDDDSample/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
+++ b/src/NDDDSample/app/presentation/NDDDSample.Web.Controllers/NDDDSample.Web.Controllers.csproj
@@ -12,6 +12,8 @@
     <AssemblyName>NDDDSample.Web.Controllers</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Properties\NDDDSample.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -93,6 +95,9 @@
       <Project>{B293706A-1955-4A51-9E87-E7F03FB3728B}</Project>
       <Name>NDDDSample.Interfaces.BookingRemoteService.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\NDDDSample.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
