--- a/src/NDDDSample/test/NDDDSample.Tests/NDDDSample.Tests.csproj
+++ b/src/NDDDSample/test/NDDDSample.Tests/NDDDSample.Tests.csproj
@@ -123,9 +123,11 @@
     <Compile Include="Presentation\CargoAdmin\RegistrationCommandTest.cs" />
     <Compile Include="Presentation\ControllerTestExtentions.cs" />
     <Compile Include="Presentation\Tracking\CargoTrackingControllerTest.cs" />
+    <Compile Include="Presentation\Tracking\CargoTrackingViewAdapterTest.cs" />
     <Compile Include="Presentation\Tracking\TrackCommandTest.cs" />
     <Compile Include="Scenarios\CargoLifecycleScenarioTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTestCategories.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
