Apply EqualsBuilder fix,  thanks to Joe Kelly, here is the link to explanation of some changes http://nerdboys.com/2009/12/17/an-implementation-of-bitconverter-singletoint32bits/
git-svn-id: http://ndddsample.googlecode.com/svn/trunk@110 8496d0c4-1a5a-11de-9308-ab3afd9c0aba

--- a/src/NDDDSample/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
+++ b/src/NDDDSample/app/infrastructure/NDDDSample.Infrastructure/NDDDSample.Infrastructure.csproj
@@ -67,8 +67,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Builders\BitConverterUtil.cs" />
     <Compile Include="Builders\EqualsBuilder.cs" />
     <Compile Include="Builders\HashCodeBuilder.cs" />
+    <Compile Include="Builders\MathUtil.cs" />
     <Compile Include="Builders\ToStringBuilder.cs" />
     <Compile Include="DateUtil.cs" />
     <Compile Include="Log\ILog.cs" />
