--- a/src/NDDDSample/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
+++ b/src/NDDDSample/app/presentation/NDDDSample.Web/NDDDSample.Web.csproj
@@ -219,6 +219,9 @@
     <Content Include="Views\CargoAdmin\Show.aspx" />
     <Content Include="Windsor.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="NDDDSample Web.url" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
