--- a/src/RegisterApp/NDDDSample.RegisterApp/NDDDSample.RegisterApp.csproj
+++ b/src/RegisterApp/NDDDSample.RegisterApp/NDDDSample.RegisterApp.csproj
@@ -41,6 +41,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\Rhino\Castle.Core.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Facilities.WcfIntegration">
+      <HintPath>..\..\..\lib\Rhino\Castle.Facilities.WcfIntegration.dll</HintPath>
+    </Reference>
     <Reference Include="Castle.MicroKernel, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\Rhino\Castle.MicroKernel.dll</HintPath>
